[package]
name = "mdbook-mathenvirons"
version = "0.1.0"
edition = "2018"

[dependencies]
mdbook = "0.4.10"
pulldown-cmark = "0.8.0"
pulldown-cmark-to-cmark = "7.1.0"
env_logger = "0.8.4"
log = "0.4.11"
clap = "2.33.3"
serde_json = "1.0.57"
toml = "0.5.6"
semver = "1.0.4"
regex = "1.0.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
